# optci

./: CMakeLists.txt  ConfigurationMatrix.hpp  ConfigurationMatrixTest.cpp  ConfigurationParser.cpp  ConfigurationParser.hpp  Phase.cpp  Phase.hpp  README.md  Trilean.hpp  function_analysis.hpp  main.cpp  optci.h  pdc_main.cpp  result_analysis_parser.cpp  result_analysis_parser.hpp  result_analysis_plot.cpp  result_analysis_plot.hpp  results_accumulator.cpp  results_analyzer.cpp  results_analyzer.hpp  run_wrapper.sh  source_optci
example_hooks/: 001_checkout  002_configure  003_make  005_change
example_hooks/004_base/: 001_prepare  001_run  002_run
example_hooks/phases/: 006_rebuild
example_hooks/phases/004_base/: 001_run
example_hooks/phases/007_rerun/: 001_run  002_run  003_teardown
example_hooks_plugin/files/: opt.patch
example_hooks_plugin/phases/: 002_configure  005_change  006_rebuild  008_compare
example_hooks_plugin/phases/007_rerun/: 001_run
result_analysis/: CMakeLists.txt  results_accumulator.cpp  results_accumulator.hpp  results_analyzer.cpp  results_analyzer.hpp
result_analysis/unit_tests/: CMakeLists.txt
result_analysis/unit_tests/results_accumulator_write/: CMakeLists.txt
tests/: test_cleanup.sh  test_prepare.sh  test_run.sh
unit_tests/: CMakeLists.txt
unit_tests/all/: CMakeLists.txt
unit_tests/all/config/: config.yaml
unit_tests/all/config/files/optci_example_matrix/: main.cpp
unit_tests/all/config/phases/002_all/: 002_change  005_run
unit_tests/auto_scaling_test/: CMakeLists.txt  main.cpp
unit_tests/auto_scaling_test/config/: config.yaml
unit_tests/auto_scaling_test/config/files/: main.cpp
unit_tests/auto_scaling_test/config/files/optci_example_matrix/: main.cpp
unit_tests/auto_scaling_test/config/phases/: 005_change  008_prepare_compare  009_compare
unit_tests/clang_tidy_test/: CMakeLists.txt  main.cpp
unit_tests/clang_tidy_test/config/: config.yaml
unit_tests/clang_tidy_test/config/files/optci_example_matrix/: main.cpp
unit_tests/clang_tidy_test/config/phases/: 001_checkout  005_change
unit_tests/configuration_matrix_test/: CMakeLists.txt  main.cpp  my_command.sh
unit_tests/configuration_parser_test/: CMakeLists.txt  main.cpp
unit_tests/configuration_parser_test/config/: .config.yaml.swp  config.yaml  config_auto.yaml  config_auto_even.yaml
unit_tests/configuration_parser_test/config/phases/: 001_example_phase  002_example_phase
unit_tests/configuration_parser_test/config_nested/: config.yaml
unit_tests/configuration_parser_test/config_nested/phases/002_all/: 002_run
unit_tests/multi_matrix_test/: CMakeLists.txt  main.cpp
unit_tests/multi_matrix_test/config/: config.yaml
unit_tests/multi_matrix_test/config/phases/002_all/: 001_configure  003_run  005_rebuild  006_rerun
unit_tests/perf_test/: CMakeLists.txt
unit_tests/perf_test/config/files/: main.cpp
unit_tests/perf_test/config/phases/: 001_checkout  002_configure  005_change
unit_tests/plugin_and_perf_test/: CMakeLists.txt  main.cpp
unit_tests/plugin_and_perf_test/config/files/optci_example_matrix/: CMakeLists.txt  main.cpp
unit_tests/plugin_and_perf_test/config/phases/: 001_checkout  002_configure  005_change
unit_tests/plugin_and_perf_test/config/phases/004_base/: 001_run
unit_tests/plugin_and_perf_test/config/phases/007_rerun/: 001_run
unit_tests/plugin_multi_impl_test/: CMakeLists.txt  main.cpp
unit_tests/plugin_multi_impl_test/config/: config.yaml
unit_tests/plugin_multi_impl_test/config/files/optci_example_matrix/: main.cpp
unit_tests/plugin_multi_impl_test/config/phases/: 001_checkout  003_compare
unit_tests/plugin_multi_impl_test/config/phases/002_all/: 001_checkout  002_change  003_configure  004_make  005_change  005_run  006_rebuild
unit_tests/plugin_multi_impl_test/config/phases/002_all/004_base/: 001_run
unit_tests/plugin_multi_impl_test/config/phases/002_all/007_rerun/: 001_run
unit_tests/plugin_test/: CMakeLists.txt
unit_tests/plugin_test/config/files/: opt.patch
unit_tests/plugin_test/config/phases/: 005_change  006_rebuild
unit_tests/result_analysis_test/: CMakeLists.txt  main.cpp
unit_tests/result_analysis_test/config/: config.yaml
unit_tests/result_analysis_test/config/phases/: .001_checkout.swp  001_checkout  008_compare
unit_tests/result_analysis_test/config/phases/004_base/: .001_run.swp  001_run
unit_tests/result_analysis_test/config/phases/007_rerun/: .001_run.swp  001_run
unit_tests/results_accumulator_write/: CMakeLists.txt  main.cpp
unit_tests/scaling_test/: CMakeLists.txt  main.cpp
unit_tests/scaling_test/config/: config.yaml
unit_tests/scaling_test/config/files/: CMakeLists.txt
unit_tests/scaling_test/config/phases/: 008_compare  009_compare
unit_tests/scaling_test/config/phases/004_base/: 001_run
unit_tests/scaling_test/config/phases/007_rerun/: 001_run
unit_tests/simple_test/: CMakeLists.txt
unit_tests/simple_test/config/files/: main.cpp
unit_tests/simple_test/config/phases/: 001_checkout  005_change
