CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(optci)

SET( CMAKE_BUILD_TYPE RELEASE )

SET( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -march=native" )
SET( CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -Wall -pedantic -DGLIBCXX_DEBUG -fsanitize=address" )
SET( CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} ${CMAKE_CXX_FLAGS} -std=c++1z" )
SET( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} ${CMAKE_C_FLAGS_DEBUG}" )
SET( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}" )

#SET( EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin )
#SET( LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib )

SET( CMAKE_EXPORT_COMPILE_COMMANDS on )

SET( LIBRARIES stdc++fs yaml-cpp hwloc )
SET( SOURCES main.cpp ConfigurationParser.cpp Phase.cpp )

ADD_EXECUTABLE(bin_optci ${SOURCES})
TARGET_LINK_LIBRARIES( bin_optci ${LIBRARIES} )

ADD_EXECUTABLE( bin_perf_data_converter pdc_main.cpp)

TARGET_LINK_LIBRARIES( bin_perf_data_converter stdc++fs )

ADD_LIBRARY(optci SHARED ${SOURCES})

TARGET_LINK_LIBRARIES( optci ${LIBRARIES} )
set_target_properties( optci PROPERTIES COMPILE_FLAGS "-DBUILDING_LIB=1")

INCLUDE_DIRECTORIES( "." )

enable_testing()

ADD_SUBDIRECTORY( unit_tests )
