add_subdirectory(simple_test)
add_subdirectory(perf_test)
add_subdirectory(plugin_test)
add_subdirectory(plugin_and_perf_test)
add_subdirectory(configuration_matrix_test)
add_subdirectory(configuration_parser_test)
add_subdirectory(scaling_test)
add_subdirectory(auto_scaling_test)
add_subdirectory(multi_matrix_test)
add_subdirectory(results_accumulator_write)
add_subdirectory(result_analysis_test)
