add_subdirectory(simple_test)
add_subdirectory(perf_test)
add_subdirectory(plugin_test)
add_subdirectory(plugin_and_perf_test)
add_subdirectory(configuration_matrix_test)
add_subdirectory(configuration_parser_test)
add_subdirectory(scaling_test)
add_subdirectory(auto_scaling_test)
add_subdirectory(multi_matrix_test)
add_subdirectory(result_analysis_test)
add_subdirectory(plugin_multi_impl_test)
add_subdirectory(all)
add_subdirectory(clang_tidy_test)
